--- a/MASLOW/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/MASLOW/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -39,6 +39,12 @@
           </li>
 
           <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/control']"
+              >Contrôle</a
+            >
+          </li>
+
+          <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/login']"
               >Login</a
             >
