make images and cards responsive

--- a/MASLOW/ClientApp/src/app/control/control.component.scss
+++ b/MASLOW/ClientApp/src/app/control/control.component.scss
@@ -1,14 +1,14 @@
-img {
-    background-size: cover;
-    margin-left: 10%;
-    width: 500px;
-    height: 200px;
-    }
 mat-card {
-    max-width: 60%;
-    margin-left: 20%;
+    max-width: 70%;
+    
+    margin-left: 15%;
     margin-bottom: 10px;
 }
+
+img {
+    max-height: 300px;
+}
+
 
 mat-icon {
     margin-left: 60%;
