--- a/MASLOW/ClientApp/src/app/home/home.component.html
+++ b/MASLOW/ClientApp/src/app/home/home.component.html
@@ -10,6 +10,6 @@
       <mat-card-subtitle>Cliquez ici pour acceder</mat-card-subtitle>
   </mat-card-header>
 
-  <img src="https://electricien24.be/wp-content/uploads/2019/02/installation-domotique-maison-intelligente-bruxelles-700x393.jpg" alt="Photo de serrure">
+  <img mat-card-image src="https://electricien24.be/wp-content/uploads/2019/02/installation-domotique-maison-intelligente-bruxelles-700x393.jpg" alt="Photo de serrure">
 
 </mat-card>
