--- a/MASLOW/ClientApp/src/app/home/home.component.scss
+++ b/MASLOW/ClientApp/src/app/home/home.component.scss
@@ -1,16 +1,11 @@
-img {
-    background-size: cover;
-    margin-left: 10%;
-    width: 500px;
-    height: 200px;
-    }
+    
 mat-card {
-    max-width: 60%;
-    margin-left: 20%;
-    margin-bottom: 10px;
+    max-width: 70%;
+    max-height: 50%;
+    margin-left: 15%;
 }
 
 .header {
     text-align: center;
-    margin-bottom: 20%;
+    margin-bottom: 10%;
 }
