logout managment and improve of layout

--- a/MASLOW.NET/MASLOW/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/MASLOW.NET/MASLOW/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -24,30 +24,20 @@
             class="nav-item"
             [routerLinkActive]="['link-active']"
             [routerLinkActiveOptions]="{ exact: true }"
+            *ngIf="isLogged"
           >
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/user']"
-              >User</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
-            >
-          </li>
-
+          
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/control']"
+            *ngIf="isLogged"
               >Contrôle</a
             >
           </li>
 
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/login']"
-              >Login</a
-            >
+          <li class="nav-link text-dark" *ngIf="isLogged" (click)="logout()">
+            Logout
           </li>
         </ul>
       </div>
