--- a/MASLOW.NET/MASLOW/ClientApp/src/app/control/control.component.html
+++ b/MASLOW.NET/MASLOW/ClientApp/src/app/control/control.component.html
@@ -1,20 +1,19 @@
-<mat-expansion-panel hideToggle>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        Température de la pièce
-      </mat-panel-title>
-      <mat-panel-description>
-        Cliquez pour afficher la température
+<mat-card class="temp">
+    <mat-card-header>
+      <mat-card-title>Température</mat-card-title>
+      <div mat-card-avatar>
         <mat-icon>device_thermostat</mat-icon>
-      </mat-panel-description>
-    </mat-expansion-panel-header>
+      </div>
+    </mat-card-header>
 
-    <mat-action-row>
-      <button mat-button color="primary">Actualiser</button>
-    </mat-action-row>
-  </mat-expansion-panel>
+    <mat-card-content>
+      <h1 class="kpi">25°c</h1>
+      <button mat-button color="primary" class="refresh">Actualiser</button>
+    </mat-card-content>
 
-<mat-card>
+</mat-card>
+
+<mat-card class="object">
     <mat-card-header>
         <mat-card-title>Serrure</mat-card-title>
         <mat-card-subtitle>Serrure ouverte</mat-card-subtitle>
@@ -29,7 +28,7 @@
 
 </mat-card>
 
-<mat-card>
+<mat-card class="object">
     <mat-card-header>
         <mat-card-title>Lampe</mat-card-title>
         <mat-card-subtitle>Lampe allumée </mat-card-subtitle>
@@ -46,7 +45,7 @@
 
 </mat-card>
 
-<mat-card>
+<mat-card class="object">
     <mat-card-header>
         <mat-card-title>Lampe sur prise arduino</mat-card-title>
         <mat-card-subtitle>Lampe allumée </mat-card-subtitle>
