--- a/MASLOW.NET/MASLOW/ClientApp/src/app/control/control.component.scss
+++ b/MASLOW.NET/MASLOW/ClientApp/src/app/control/control.component.scss
@@ -1,8 +1,22 @@
-mat-card {
+.object {
     max-width: 70%;
     
     margin-left: 15%;
     margin-bottom: 10px;
+}
+
+.kpi {
+    text-align: center;
+}
+
+.refresh {
+    text-align: center;
+}
+
+.temp {
+    max-width: 70%;
+    margin-bottom: 10px;
+    margin-left: 15%;
 }
 
 img {
@@ -12,8 +26,4 @@ img {
 
 mat-icon {
     margin-left: 60%;
-}
-
-mat-expansion-panel {
-    margin-bottom: 10px;
 }
